--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "d1-tutorial",
-  "version": "0.0.0",
+  "name": "database",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
