--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@cloudflare/vitest-pool-workers": "^0.5.2",
     "vitest": "2.1.8",
     "wrangler": "^3.103.2"
+  },
+  "dependencies": {
+    "@types/web": "^0.0.196"
   }
 }
