--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,18 @@
 services:
-  database:
+  postgres:
+    environment:
+      POSTGRES_USER: $SPRING_DATASOURCE_USERNAME
+      POSTGRES_PASSWORD: $SPRING_DATASOURCE_PASSWORD
+    image: postgres:16.2
+    ports:
+      - 5432:5432
+    restart: unless-stopped
+  skofnung:
     build: .
+    depends_on:
+      - postgres
+    env_file:
+      - .env
     ports:
       - 8080:8080
+    restart: on-failure:4
