--- a/compose.yaml
+++ b/compose.yaml
@@ -5,14 +5,14 @@ services:
       POSTGRES_PASSWORD: $SPRING_DATASOURCE_PASSWORD
     image: postgres:16.2
     ports:
-      - 5432:5432
+      - "5432:5432"
     restart: unless-stopped
-  skofnung:
+  database:
     build: .
     depends_on:
       - postgres
     env_file:
       - .env
     ports:
-      - 8080:8080
-    restart: on-failure:4
+      - "8080:8080"
+    restart: on-failure
