--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -3,3 +3,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/
     username: admin
     password: admin
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
