--- a/compose-test.yaml
+++ b/compose-test.yaml
@@ -4,6 +4,10 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
     image: postgres:16.2
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     restart: unless-stopped
+volumes:
+  postgres_data:
