--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
       POSTGRES_PASSWORD: $SPRING_DATASOURCE_PASSWORD
     image: postgres:16.2
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - /root/data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     restart: unless-stopped
@@ -18,5 +18,3 @@ services:
     ports:
       - "8080:8080"
     restart: on-failure
-volumes:
-  postgres_data:
