--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,11 @@
+server:
+  port: 443
+  ssl:
+    key-store: classpath:keystore.p12
 spring:
   jpa:
     generate-ddl: true
   servlet:
     multipart:
-      max-file-size: 5MB
-      max-request-size: 100MB
+      max-file-size: 4MB
+      max-request-size: 64MB
