--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,8 @@ services:
       - postgres
     env_file:
       - .env
+    volumes:
+      - ${SERVER_SSL_KEY_STORE}:${SERVER_SSL_KEY_STORE}:ro
     ports:
       - "443:443"
     restart: on-failure
