Cache manager and ApiController.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,10 @@
 server:
   port: 443
 spring:
+  cache:
+    type: caffeine
+    caffeine:
+      spec: maximumSize=64
   jpa:
     generate-ddl: true
   servlet:
