--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
         <!-- Image processor -->
         <dependency>
             <groupId>net.coobird</groupId>
