--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,8 @@ spring:
     type: caffeine
     caffeine:
       spec: maximumSize=64
+  jackson:
+    default-property-inclusion: NON_EMPTY
   jpa:
     generate-ddl: true
   servlet:
