--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
   port: 443
 spring:
+  datasource:
+    url: jdbc:postgresql://postgres:5432/
   cache:
     type: caffeine
     caffeine:
