--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -3,6 +3,8 @@ cors:
     come-in-and-find-out: "*"
 server:
   port: 8080
+  ssl:
+    enabled: false
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/
