--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 cors:
   origins:
-    come-in-and-find-out: "https://come-in-and-find-out.ch"
+    ciafo: "https://come-in-and-find-out.ch"
 server:
   port: 443
 spring:
