--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.mailersend</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
         </dependency>
