--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
-cors:
-  origins:
-    ciafo: "https://come-in-and-find-out.ch"
+app:
+  clients:
+    ciafo:
+      origin: "https://come-in-and-find-out.ch"
 server:
   port: 443
 spring:
