--- a/compose-test.yaml
+++ b/compose-test.yaml
@@ -2,7 +2,7 @@ services:
   postgres:
     image: postgres:16.2
     volumes:
-      - /tmp/data:/var/lib/postgresql/data
+      - /tmp/outsideworx/data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     restart: unless-stopped
