--- a/compose-test.yaml
+++ b/compose-test.yaml
@@ -1,5 +1,6 @@
 services:
   postgres:
+    container_name: postgres
     image: postgres:16.2
     volumes:
       - /tmp/outsideworx/data:/var/lib/postgresql/data
