--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,6 @@
 services:
   postgres:
+    container_name: postgres
     environment:
       POSTGRES_USER: $SPRING_DATASOURCE_USERNAME
       POSTGRES_PASSWORD: $SPRING_DATASOURCE_PASSWORD
@@ -8,11 +9,12 @@ services:
       - /root/outsideworx/data:/var/lib/postgresql/data
     restart: unless-stopped
   vault:
-    build: .
+    container_name: vault
     depends_on:
       - postgres
     env_file:
       - .env
+    build: .
     volumes:
       - ${SERVER_SSL_KEY_STORE}:${SERVER_SSL_KEY_STORE}:ro
       - /root/outsideworx/logs:/tmp/outsideworx/logs
