--- a/compose-test.yaml
+++ b/compose-test.yaml
@@ -1,9 +1,9 @@
 services:
   postgres:
     container_name: postgres
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
     image: postgres:16.2
-    volumes:
-      - /tmp/outsideworx/data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     restart: unless-stopped
