Final Peeps API.

--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -3,6 +3,9 @@ app:
     ciafo:
       origin: "*"
       token: "test"
+    peeps:
+      origin: "*"
+      token: "test"
 server:
   port: 8080
   ssl:
