--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -6,6 +6,9 @@ app:
     peeps:
       origin: "*"
       token: "test"
+  services:
+    grafana:
+      url: "http://localhost:3000"
 server:
   port: 8080
   ssl:
