--- a/compose.yaml
+++ b/compose.yaml
@@ -27,8 +27,10 @@ services:
       - /home/outsideworx/data:/var/lib/postgresql/data
   prometheus:
     container_name: prometheus
+    depends_on:
+      - vault
     image: prom/prometheus:v3.6.0
-    restart: always
+    restart: unless-stopped
     user: root
     volumes:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
