--- a/compose-test.yaml
+++ b/compose-test.yaml
@@ -7,6 +7,11 @@ services:
     image: grafana/grafana:12.2.0
     ports:
       - "3000:3000"
+  loki:
+    container_name: loki
+    image: grafana/loki:3.5.5
+    ports:
+      - "3100:3100"
   postgres:
     container_name: postgres
     environment:
