--- a/prometheus-test.yaml
+++ b/prometheus-test.yaml
@@ -1,6 +1,9 @@
 global:
   scrape_interval: 5s
 scrape_configs:
+  - job_name: loki
+    static_configs:
+      - targets: [ "host.docker.internal:3100" ]
   - job_name: vault
     metrics_path: /actuator/prometheus
     static_configs:
