--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,6 +1,9 @@
 global:
   scrape_interval: 30s
 scrape_configs:
+  - job_name: loki
+    static_configs:
+      - targets: [ "loki:3100" ]
   - job_name: vault
     metrics_path: /actuator/prometheus
     static_configs:
