--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -9,6 +9,8 @@ app:
   services:
     grafana:
       url: "http://localhost:3000"
+    loki:
+      url: "http://localhost:3100"
 server:
   port: 8080
   ssl:
