Loki retention period.

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,9 @@ services:
   grafana:
     container_name: grafana
     environment:
-      GF_SERVER_PROTOCOL: https
       GF_SECURITY_ADMIN_USER: $GF_SECURITY_ADMIN_USER
       GF_SECURITY_ADMIN_PASSWORD: $GF_SECURITY_ADMIN_PASSWORD
+      GF_SERVER_PROTOCOL: https
       GF_SERVER_CERT_FILE: $SERVER_SSL_CERTIFICATE
       GF_SERVER_CERT_KEY: $SERVER_SSL_CERTIFICATE_PRIVATE_KEY
     image: grafana/grafana:12.2.0
@@ -13,12 +13,17 @@ services:
     restart: unless-stopped
     user: root
     volumes:
-      - ${SERVER_SSL_CERTIFICATE}:${SERVER_SSL_CERTIFICATE}:ro
-      - ${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}:${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}:ro
+      - ${SERVER_SSL_CERTIFICATE}:${SERVER_SSL_CERTIFICATE}
+      - ${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}:${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}
       - /home/outsideworx/grafana:/var/lib/grafana
   loki:
     container_name: loki
     image: grafana/loki:3.5.5
+    restart: unless-stopped
+    user: root
+    volumes:
+      - /home/outsideworx/loki:/loki
+      - ./loki.yaml:/etc/loki/config.yml
   postgres:
     container_name: postgres
     environment:
@@ -31,17 +36,19 @@ services:
   prometheus:
     container_name: prometheus
     depends_on:
+      - loki
       - vault
     image: prom/prometheus:v3.6.0
     restart: unless-stopped
     user: root
     volumes:
-      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
       - /home/outsideworx/prometheus:/prometheus
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
   vault:
     build: .
     container_name: vault
     depends_on:
+      - loki
       - postgres
     env_file:
       - .env
@@ -49,5 +56,5 @@ services:
       - "443:443"
     restart: on-failure:4
     volumes:
-      - ${SERVER_SSL_CERTIFICATE}:${SERVER_SSL_CERTIFICATE}:ro
-      - ${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}:${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}:ro
+      - ${SERVER_SSL_CERTIFICATE}:${SERVER_SSL_CERTIFICATE}
+      - ${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}:${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}
