--- a/compose.yaml
+++ b/compose.yaml
@@ -41,6 +41,10 @@ services:
     volumes:
       - /home/outsideworx/prometheus:/prometheus
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+  tinyproxy:
+    container_name: tinyproxy
+    image: vimagick/tinyproxy
+    restart: unless-stopped
   vault:
     build: .
     container_name: vault
