--- a/prometheus-test.yaml
+++ b/prometheus-test.yaml
@@ -4,6 +4,12 @@ scrape_configs:
   - job_name: loki
     static_configs:
       - targets: [ "host.docker.internal:3100" ]
+  - job_name: pages
+    metrics_path: /metrics.txt
+    proxy_url: http://tinyproxy:8888
+    scheme: https
+    static_configs:
+      - targets: [ "outsideworx.net" ]
   - job_name: vault
     metrics_path: /actuator/prometheus
     static_configs:
