--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -4,7 +4,7 @@ scrape_configs:
   - job_name: loki
     static_configs:
       - targets: [ "loki:3100" ]
-  - job_name: pages
+  - job_name: sites
     metrics_path: /metrics.txt
     proxy_url: http://tinyproxy:8888
     scheme: https
