--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,7 @@
+x-common-certificate: &common-certificate
+  ${SERVER_SSL_CERTIFICATE}:${SERVER_SSL_CERTIFICATE}
+x-common-certificate-private-key: &common-certificate-private-key
+  ${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}:${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}
 services:
   grafana:
     container_name: grafana
@@ -13,9 +17,9 @@ services:
     restart: unless-stopped
     user: root
     volumes:
-      - ${SERVER_SSL_CERTIFICATE}:${SERVER_SSL_CERTIFICATE}
-      - ${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}:${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}
       - /home/outsideworx/grafana:/var/lib/grafana
+      - *common-certificate
+      - *common-certificate-private-key
   loki:
     container_name: loki
     image: grafana/loki:3.5.5
@@ -57,5 +61,5 @@ services:
       - "443:443"
     restart: on-failure:4
     volumes:
-      - ${SERVER_SSL_CERTIFICATE}:${SERVER_SSL_CERTIFICATE}
-      - ${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}:${SERVER_SSL_CERTIFICATE_PRIVATE_KEY}
+      - *common-certificate
+      - *common-certificate-private-key
