--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -17,7 +17,19 @@ RUN sed -i \
     -e 's|^ServerName.*|ServerName services.outsideworx.net|' \
     -e 's|^SSLCertificateFile.*|SSLCertificateFile "/usr/local/apache2/conf/fullchain.pem"|' \
     -e 's|^SSLCertificateKeyFile.*|SSLCertificateKeyFile "/usr/local/apache2/conf/privkey.pem"|' \
+    -e '/<\/VirtualHost>/i <Location "/metrics.txt">\nRequire all denied\n</Location>' \
     conf/extra/httpd-ssl.conf
 
-EXPOSE 443
+RUN cat <<'EOF' > conf/extra/httpd-metrics.conf
+Listen 80
+<VirtualHost *:80>
+    DocumentRoot "/usr/local/apache2/htdocs"
+    <LocationMatch "^(?!/metrics.txt)">
+        Require all denied
+    </LocationMatch>
+</VirtualHost>
+EOF
+RUN echo "Include conf/extra/httpd-metrics.conf" >> conf/httpd.conf
+
+EXPOSE 80 443
 CMD ["httpd-foreground"]
