--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -8,15 +8,15 @@ scrape_configs:
     metrics_path: /metrics.txt
     static_configs:
       - targets: [
-        "come-in-and-find-out:80",
-        "duckumbrella:80",
-        "gaiapeeps:80",
-        "igli:80",
-        "outsideworx:80",
-        "soupart:80",
-        "soupkitchen:80"
+        "come-in-and-find-out",
+        "duckumbrella",
+        "gaiapeeps",
+        "igli",
+        "outsideworx",
+        "soupart",
+        "soupkitchen"
       ]
   - job_name: vault
     metrics_path: /actuator/prometheus
     static_configs:
-      - targets: [ "vault:80" ]
+      - targets: [ "vault" ]
