--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -7,6 +7,7 @@ services:
     build:
       args:
         NAME: come-in-and-find-out
+        API_KEY: $APP_CLIENTS_CIAFO_TOKEN
       dockerfile: Dockerfile.site
     container_name: come-in-and-find-out
     ports:
@@ -31,6 +32,7 @@ services:
     build:
       args:
         NAME: gaiapeeps
+        API_KEY: $APP_CLIENTS_PEEPS_TOKEN
       dockerfile: Dockerfile.site
     container_name: gaiapeeps
     ports:
