--- a/Dockerfile.site.test
+++ b/Dockerfile.site.test
@@ -10,6 +10,7 @@ RUN sed -i \
     -e 's|#LoadModule headers_module modules/mod_headers.so|LoadModule headers_module modules/mod_headers.so|' \
     -e 's|#LoadModule proxy_module modules/mod_proxy.so|LoadModule proxy_module modules/mod_proxy.so|' \
     -e 's|#LoadModule proxy_http_module modules/mod_proxy_http.so|LoadModule proxy_http_module modules/mod_proxy_http.so|' \
+    -e 's|#LoadModule ratelimit_module modules/mod_ratelimit.so|LoadModule ratelimit_module modules/mod_ratelimit.so|' \
     -e '$aInclude conf/extra/httpd-proxy.conf' \
     conf/httpd.conf
 
@@ -36,6 +37,16 @@ ProxyPassReverse "/api/"  "http://host.docker.internal/api/"
         media-src * https:;                     \
         script-src * 'unsafe-inline';           \
         style-src * 'unsafe-inline';"
+</IfModule>
+<IfModule mod_ratelimit.c>
+    SetOutputFilter RATE_LIMIT
+    SetEnv rate-limit 640
+</IfModule>
+<IfModule mpm_event_module>
+    StartServers       1
+    MinSpareThreads    4
+    ThreadsPerChild    4
+    MaxRequestWorkers  8
 </IfModule>
 EOF
 
