--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -11,6 +11,7 @@ RUN sed -i \
     -e 's|#LoadModule headers_module modules/mod_headers.so|LoadModule headers_module modules/mod_headers.so|' \
     -e 's|#LoadModule proxy_module modules/mod_proxy.so|LoadModule proxy_module modules/mod_proxy.so|' \
     -e 's|#LoadModule proxy_http_module modules/mod_proxy_http.so|LoadModule proxy_http_module modules/mod_proxy_http.so|' \
+    -e 's|#LoadModule ratelimit_module modules/mod_ratelimit.so|LoadModule ratelimit_module modules/mod_ratelimit.so|' \
     -e 's|#LoadModule ssl_module modules/mod_ssl.so|LoadModule ssl_module modules/mod_ssl.so|' \
     -e 's|#LoadModule socache_shmcb_module modules/mod_socache_shmcb.so|LoadModule socache_shmcb_module modules/mod_socache_shmcb.so|' \
     -e '/^Listen 80/d' \
@@ -61,6 +62,13 @@ ProxyPassReverse "/api/"  "https://vault/api/"
         media-src * https:;                     \
         script-src * 'unsafe-inline';           \
         style-src * 'unsafe-inline';"
+</IfModule>
+<IfModule mod_ratelimit.c>
+    SetOutputFilter RATE_LIMIT
+    SetEnv rate-limit 1280
+</IfModule>
+<IfModule mpm_event_module>
+    MaxRequestWorkers 75
 </IfModule>
 EOF
 
