--- a/compose.yaml
+++ b/compose.yaml
@@ -23,6 +23,8 @@ services:
   loki:
     container_name: loki
     image: grafana/loki:3.5.5
+    ports:
+      - "3100:3100"
     restart: unless-stopped
     user: root
     volumes:
