--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -15,11 +15,23 @@ RUN sed -i \
     -e 's|#LoadModule ssl_module modules/mod_ssl.so|LoadModule ssl_module modules/mod_ssl.so|' \
     -e 's|#LoadModule socache_shmcb_module modules/mod_socache_shmcb.so|LoadModule socache_shmcb_module modules/mod_socache_shmcb.so|' \
     -e '/^Listen 80/d' \
+    -e '$aInclude conf/extra/httpd-logs.conf' \
     -e '$aInclude conf/extra/httpd-metrics.conf' \
     -e '$aInclude conf/extra/httpd-proxy.conf' \
     -e '$aInclude conf/extra/httpd-ssl.conf' \
     -e '$aServerName services.outsideworx.net' \
     conf/httpd.conf
+
+RUN find conf -type f -name '*.conf' -exec sed -i \
+    -e '/^[[:space:]]*CustomLog/d' \
+    -e '/^[[:space:]]*ErrorLog/d' {} +
+
+RUN cat <<EOF > conf/extra/httpd-logs.conf
+LogFormat "%{%Y-%m-%dT%H:%M:%S%z}t INFO %P --- %a: %r %>s" log_format
+CustomLog /dev/stdout log_format
+ErrorLogFormat "%{%Y-%m-%dT%H:%M:%S%z}t ERROR %P --- %a: %M"
+ErrorLog /dev/stderr
+EOF
 
 RUN sed -i \
     -e 's|^ServerName.*|ServerName services.outsideworx.net|' \
