--- a/Dockerfile.site.test
+++ b/Dockerfile.site.test
@@ -20,10 +20,11 @@ RUN find conf -type f -name '*.conf' -exec sed -i \
     -e '/^[[:space:]]*ErrorLog/d' {} +
 
 RUN cat <<EOF > conf/extra/httpd-logs.conf
-LogFormat "%{%Y-%m-%dT%H:%M:%S%z}t INFO %P --- %a: %r %>s" log_format
-CustomLog /dev/stdout log_format
 ErrorLogFormat "%{%Y-%m-%dT%H:%M:%S%z}t ERROR %P --- %a: %M"
 ErrorLog /dev/stderr
+LogFormat "%{%Y-%m-%dT%H:%M:%S%z}t INFO %P --- %a: %r %>s" log_format
+SetEnvIf Request_URI "^/metrics\.txt$" no_log
+CustomLog /dev/stdout log_format env=!no_log
 EOF
 
 RUN cat <<EOF > conf/extra/httpd-proxy.conf
