--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -28,9 +28,9 @@ RUN find conf -type f -name '*.conf' -exec sed -i -E \
     -e '/^[[:space:]]*TransferLog/d' {} +
 
 RUN cat <<EOF > conf/extra/httpd-logs.conf
-ErrorLogFormat "%{%Y-%m-%dT%H:%M:%S%z}t ERROR %P --- %a: %M"
+ErrorLogFormat "ERROR %P --- %a: %M"
 ErrorLog /dev/stderr
-LogFormat "%{%Y-%m-%dT%H:%M:%S%z}t INFO %P --- %a: %r %>s" log_format
+LogFormat "INFO %P --- %a: %r %>s" log_format
 SetEnvIf Request_URI "^/metrics\.txt$" no_log
 CustomLog /dev/stdout log_format env=!no_log
 EOF
