--- a/prometheus-test.yaml
+++ b/prometheus-test.yaml
@@ -3,7 +3,7 @@ global:
 scrape_configs:
   - job_name: loki
     static_configs:
-      - targets: [ "host.docker.internal:3100" ]
+      - targets: [ "loki:3100" ]
   - job_name: sites
     metrics_path: /metrics.txt
     static_configs:
